<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 主界面 -->
    <string name="app_name">PushBox</string>
    <string name="menu_settings">Settings</string>
    <string name="about_text">About</string>
    <string name="continue_text">Continue</string>
    <string name="new_game_text">New Game</string>
    <string name="exit_text">Exit</string>
    
    <dimen name = "btn_width">200dp</dimen>
	<dimen name = "title_text_size">40sp</dimen>
	<dimen name = "btn_text_size">20sp</dimen>
	<dimen name = "title_height">50dp</dimen>
    <color name="title_text_color">#FF7C00</color>
    <color name="btn_text_color">#7A118C</color>
    <color name="bg_color">#AA2233</color> 
    
     <!--  音乐设置 -->
    <string name="music_key">music</string>
    <string name="music_title">music setting</string>
    <string name="music_on">music on</string>
    <string name="music_off">music off</string>
    
	<string name="help_content">开发者：吴世杰,徐俊豪.版本1.0</string>

    <string name="regame_text">重新开始</string>
    <string name="pergame_text">上一关</string>
    <string name="help_text">帮助视频</string>
    <string name="back_text">退回上一步</string>
    <string name="music_text">背景音乐</string>
	<string name="explain_text">游戏说明</string>
    <string name="bgset_text">背景设置</string>
    <string name="shuoming">最经典的推箱子游戏，类似的游戏你一定早就玩过。要控制搬运工上下左右移动，来将箱子推到指定地点
记得几年前，《推箱子》在PC机上刮起了一股不小的益智类游戏的旋风，现在许多资深玩家也都对《推箱子》赞不绝口，可见有深度的益智类游戏是非常受大家欢迎的。　\n推箱子游戏1981年由日本人今林宏行首创，是在1982年12月由Thinking Rabbit 公司首次发行，名“仓库番”。箱子只可以推, 不可以拉, 而且一次只能推动一个，胜利条件就是把所有的箱子都推到目的地。
\n推箱子游戏是一种老少皆宜的益智游戏，既可以开发青少年学生的智力，又可以防止老年痴呆症，全家一起攻关还可以促进家庭和睦，何乐而不为？</string>
    <string name="game_back">退回上一步</string>
    <string name="regame">重新开始</string>
    <string name="gate_text"></string>
    

</resources>
