<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"

 	 android:background="@drawable/mn"
    android:id="@+id/ll" > 
      <!--   android:background="@color/bg_color" -->
     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/title_height"
        android:text="@string/app_name"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/title_text_color"/>

    <Button
        android:id="@+id/btn_about"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:onClick="onClick"
        android:text="@string/about_text"
        android:textColor="@color/btn_text_color"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/continue_text" 
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/btn_text_color"
         android:onClick="onClick"/>

    <Button
        android:id="@+id/btn_newgame"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/new_game_text"
        android:textColor="@color/btn_text_color"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:text="@string/exit_text"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/btn_text_color"
        android:onClick="onClick"/>

</LinearLayout>